# cinertia-mosaic

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTES.md  README.md  index.html
.claude/: settings.local.json
companion-module/companion-module-cinertia-mosaic/: main.js  package-lock.json  package.json
companion-module/companion-module-cinertia-mosaic/companion/: HELP.md  manifest.json
companion-module/companion-module-cinertia-mosaic/pkg/: main.js  package.json
companion-module/companion-module-cinertia-mosaic/pkg/companion/: manifest.json
dev/macos-hello/: CMakeLists.txt
dev/macos-hello/qml/: Main.qml
dev/macos-hello/src/: main.cpp
docs/: CHANGELOG.md  USER-GUIDE.md
docs/guide-src/: mosaic-user-guide.html
installer/: mosaic.iss
qml/: Main.qml  OutputWindow.qml  Tile.qml  TileCanvas.qml
resources/: Info.plist.in  mosaic.icns  mosaic.rc
scripts/: stage-deploy-mac.sh  stage-deploy.ps1
shaders/: uyvy.frag  uyvy.vert
src/: CursorGuard.cpp  CursorGuard.h  PowerGuard.cpp  PowerGuard.h  UpdateChecker.cpp  UpdateChecker.h  main.cpp
src/ndi/: NdiFinder.cpp  NdiFinder.h  NdiVideoItem.cpp  NdiVideoItem.h  UyvyMaterial.cpp  UyvyMaterial.h
